--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
   <!-- MAIN CSS FILE -->
   <link href="css/style.css" rel="stylesheet" type="text/css" />
+
+  <!-- Adobe Fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/zys8ixn.css">
 </head>
 
 <body>
@@ -22,6 +25,16 @@
     <p>Tart pie brownie cookie topping chocolate gingerbread caramels dragée. Gummi bears topping tootsie roll fruitcake chupa chups cotton candy. Croissant tootsie roll bear claw chocolate cake bear claw powder sweet roll. Liquorice cupcake soufflé liquorice topping cookie powder wafer.</p>
 
     <p>Gingerbread gingerbread cake sugar plum. Chupa chups soufflé dragée lemon drops lemon drops sugar plum. Gingerbread tart lemon drops candy sweet macaroon. Pie cookie dragée chocolate bar pudding topping tiramisu cotton candy topping.</p>
+
+    <hr/>
+
+    <h1 class="mainhead">Headline Title</h1>
+    <h2 class="subhead">This is a subheader.</h2>
+
+    <p>Tart pie brownie cookie topping chocolate gingerbread caramels dragée. Gummi bears topping tootsie roll fruitcake chupa chups cotton candy. Croissant tootsie roll bear claw chocolate cake bear claw powder sweet roll. Liquorice cupcake soufflé liquorice topping cookie powder wafer.</p>
+
+    <p>Gingerbread gingerbread cake sugar plum. Chupa chups soufflé dragée lemon drops lemon drops sugar plum. Gingerbread tart lemon drops candy sweet macaroon. Pie cookie dragée chocolate bar pudding topping tiramisu cotton candy topping.</p>
+
     
 </body>
 </html>
