--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     <h1 class="mainhead">Headline Title</h1>
     <h2 class="subhead">This is a subheader.</h2>
 
-    <p>Tart pie brownie cookie topping chocolate gingerbread caramels dragée. Gummi bears topping tootsie roll fruitcake chupa chups cotton candy. Croissant tootsie roll bear claw chocolate cake bear claw powder sweet roll. Liquorice cupcake soufflé liquorice topping cookie powder wafer.</p>
+    <p>Tart pie brownie cookie topping chocolate gingerbread caramels dragée. This is someting <strong>bold</strong>, <em>italic</em>, and a <a href="#">link</a>. Gummi bears topping tootsie roll fruitcake chupa chups cotton candy. Croissant tootsie roll bear claw chocolate cake bear claw powder sweet roll. Liquorice cupcake soufflé liquorice topping cookie powder wafer.</p>
 
     <p>Gingerbread gingerbread cake sugar plum. Chupa chups soufflé dragée lemon drops lemon drops sugar plum. Gingerbread tart lemon drops candy sweet macaroon. Pie cookie dragée chocolate bar pudding topping tiramisu cotton candy topping.</p>
 
-    
+    <button>This is a button</button>
+    <a class="button">This is a button link</a>
+    <a class="button alt">This is a alt button link</a>
 </body>
 </html>
