added media queries

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+  <div class="container">
+
     <h1>heading 1</h1>
     <h2>heading 2</h2>
     <h3>heading 3</h3>
@@ -38,5 +40,10 @@
     <button>This is a button</button>
     <a class="button">This is a button link</a>
     <a class="button alt">This is a alt button link</a>
+
+    <img src="https://via.placeholder.com/1500x500" alt="placeholderImage">
+    <img src="https://place-hold.it/1500x500" alt="placeholderImage">
+    <img src="img/placeholder1500x500.gif" alt="placeholderImage">
+  </div>
 </body>
 </html>
