--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
     <img src="https://via.placeholder.com/1500x500" alt="placeholderImage">
     <img src="https://place-hold.it/1500x500" alt="placeholderImage">
     <img src="img/placeholder1500x500.gif" alt="placeholderImage">
+  
+  <h3>Grid</h3>
+  <div class="row demo">
+    <div class="column">column</div>
+  </div>
+  <div class="row demo">
+    <div class="column">column</div>
+    <div class="column">column</div>
+  </div>
+  
+  <div class="row demo">
+    <div class="column">column</div>
+    <div class="column">column</div>
+    <div class="column">column</div>
+  </div>
+  
+  <div class="row demo">
+    <div class="column">column</div>
+    <div class="column">column</div>
+    <div class="column">column</div>
+    <div class="column">column</div>
+  </div>
+  
+  
+  
   </div>
 </body>
 </html>
