--- a/index.html
+++ b/index.html
@@ -50,21 +50,31 @@
     <div class="column">column</div>
   </div>
   <div class="row demo">
-    <div class="column">column</div>
-    <div class="column">column</div>
+    <div class="column one-half">&frac12; column</div>
+    <div class="column one-half">&frac12; column</div>
   </div>
   
   <div class="row demo">
-    <div class="column">column</div>
-    <div class="column">column</div>
-    <div class="column">column</div>
+    <div class="column one-third">&frac13; column</div>
+    <div class="column one-third">&frac13; column</div>
+    <div class="column one-third">&frac13; column</div>
+  </div>
+  <div class="row demo">
+    <div class="column one-third">&frac13; column</div>
+    <div class="column two-thirds">&frac23; column</div>
   </div>
   
   <div class="row demo">
-    <div class="column">column</div>
-    <div class="column">column</div>
-    <div class="column">column</div>
-    <div class="column">column</div>
+    <div class="column one-fourth">&frac14; column</div>
+    <div class="column one-fourth">&frac14; column</div>
+    <div class="column one-fourth">&frac14; column</div>
+    <div class="column one-fourth">&frac14; column</div>
+  </div>
+
+
+  <div class="row demo">
+    <div class="column one-fourth">&frac14; column</div>
+    <div class="column three-fourths">&frac34; column</div>
   </div>
   
   
