updated structural elements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
 </head>
 
 <body>
+  <header class="site-header">
+    <div class="site-id">
+      <h1><a href="#">Sassy Base 2019</a></h1>
+    </div>
+
+    <nav class="site-nav">
+        <ul>
+          <li><a href="#">Typography</a></li>
+          <li><a href="#">Layout</a></li>
+        </ul>
+    </nav>
+
+  </header>
+  
+<section class="hero">
+  <h2>Sassy Base</h2>
+  <p>This is a simple, single page website, built with SASS.</p>
+  <a class="button"> Go to Typography</a>
+</section>
+
   <div class="container">
 
     <h1>heading 1</h1>
@@ -77,8 +97,17 @@
     <div class="column three-fourths">&frac34; column</div>
   </div>
   
-  
-  
   </div>
+
+  <footer class="site-footer">
+      <nav class="site-nav">
+          <ul>
+            <li><a href="#Top">home</a></li>
+            <li><a href="#">Typography</a></li>
+            <li><a href="#">Layout</a></li>
+          </ul>
+      </nav>
+  
+    </footer>
 </body>
 </html>
