--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
 
     <p>Gingerbread gingerbread cake sugar plum. Chupa chups soufflé dragée lemon drops lemon drops sugar plum. Gingerbread tart lemon drops candy sweet macaroon. Pie cookie dragée chocolate bar pudding topping tiramisu cotton candy topping.</p>
 
+    <h3>horizontal Rule</h3>
+    <h3>default</h3>
     <hr/>
+    <br/> 
+    <h3>css</h3>
+    <hr class="hr_"/>
 
     <h1 class="mainhead">Headline Title</h1>
     <h2 class="subhead">This is a subheader.</h2>
