--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,95 +23,122 @@
     </div>
 
     <nav class="site-nav">
-        <ul>
-          <li><a href="#">Typography</a></li>
-          <li><a href="#">Layout</a></li>
-        </ul>
+      <ul>
+        <li><a href="#typography">Typography</a></li>
+        <li><a href="#layout">Layout</a></li>
+      </ul>
     </nav>
 
   </header>
-  
-<section class="hero">
-  <h2>Sassy Base</h2>
-  <p>This is a simple, single page website, built with SASS.</p>
-  <a class="button"> Go to Typography</a>
-</section>
+
+  <section class="hero">
+    <h2>Sassy Base</h2>
+    <p>This is a simple, single page website, built with SASS.</p>
+    <a class="button"> Go to Typography</a>
+  </section>
 
   <div class="container">
-
-    <h1>heading 1</h1>
-    <h2>heading 2</h2>
-    <h3>heading 3</h3>
-
-    <p>Tart pie brownie cookie topping chocolate gingerbread caramels dragée. Gummi bears topping tootsie roll fruitcake chupa chups cotton candy. Croissant tootsie roll bear claw chocolate cake bear claw powder sweet roll. Liquorice cupcake soufflé liquorice topping cookie powder wafer.</p>
-
-    <p>Gingerbread gingerbread cake sugar plum. Chupa chups soufflé dragée lemon drops lemon drops sugar plum. Gingerbread tart lemon drops candy sweet macaroon. Pie cookie dragée chocolate bar pudding topping tiramisu cotton candy topping.</p>
-
     <h3>horizontal Rule</h3>
     <h3>default</h3>
-    <hr/>
-    <br/> 
+    <hr />
     <h3>css</h3>
-    <hr class="hr_"/>
-
-    <h1 class="mainhead">Headline Title</h1>
-    <h2 class="subhead">This is a subheader.</h2>
-
-    <p>Tart pie brownie cookie topping chocolate gingerbread caramels dragée. This is someting <strong>bold</strong>, <em>italic</em>, and a <a href="#">link</a>. Gummi bears topping tootsie roll fruitcake chupa chups cotton candy. Croissant tootsie roll bear claw chocolate cake bear claw powder sweet roll. Liquorice cupcake soufflé liquorice topping cookie powder wafer.</p>
-
-    <p>Gingerbread gingerbread cake sugar plum. Chupa chups soufflé dragée lemon drops lemon drops sugar plum. Gingerbread tart lemon drops candy sweet macaroon. Pie cookie dragée chocolate bar pudding topping tiramisu cotton candy topping.</p>
-
-    <button>This is a button</button>
-    <a class="button">This is a button link</a>
-    <a class="button alt">This is a alt button link</a>
-
-    <img src="https://via.placeholder.com/1500x500" alt="placeholderImage">
-    <img src="https://place-hold.it/1500x500" alt="placeholderImage">
-    <img src="img/placeholder1500x500.gif" alt="placeholderImage">
-  
-  <h3>Grid</h3>
-  <div class="row demo">
-    <div class="column">column</div>
-  </div>
-  <div class="row demo">
-    <div class="column one-half">&frac12; column</div>
-    <div class="column one-half">&frac12; column</div>
-  </div>
-  
-  <div class="row demo">
-    <div class="column one-third">&frac13; column</div>
-    <div class="column one-third">&frac13; column</div>
-    <div class="column one-third">&frac13; column</div>
-  </div>
-  <div class="row demo">
-    <div class="column one-third">&frac13; column</div>
-    <div class="column two-thirds">&frac23; column</div>
-  </div>
-  
-  <div class="row demo">
-    <div class="column one-fourth">&frac14; column</div>
-    <div class="column one-fourth">&frac14; column</div>
-    <div class="column one-fourth">&frac14; column</div>
-    <div class="column one-fourth">&frac14; column</div>
+    <hr class="hr_" />
   </div>
 
+  <section id="typography">
+    <div class="container">
+      <h3 class="sectionhead">Typography</h3>
+      <h3 class="_line"></h3>
+      <p class="meta">Typographic Scale</p>
+      <h1>heading 1</h1>
+      <h2>heading 2</h2>
+      <h3>heading 3</h3>
 
-  <div class="row demo">
-    <div class="column one-fourth">&frac14; column</div>
-    <div class="column three-fourths">&frac34; column</div>
-  </div>
-  
-  </div>
+      <p>Tart pie brownie cookie topping chocolate gingerbread caramels dragée. Gummi bears topping tootsie roll
+        fruitcake chupa chups cotton candy. Croissant tootsie roll bear claw chocolate cake bear claw powder sweet roll.
+        Liquorice cupcake soufflé liquorice topping cookie powder wafer.</p>
+
+      <p>Gingerbread gingerbread cake sugar plum. Chupa chups soufflé dragée lemon drops lemon drops sugar plum.
+        Gingerbread tart lemon drops candy sweet macaroon. Pie cookie dragée chocolate bar pudding topping tiramisu
+        cotton candy topping.</p>
+
+      <hr class="hr_" />
+
+      <p class="meta">Typographic Specimen</p>
+      <h1 class="mainhead">Headline Title</h1>
+      <h2 class="subhead">This is a subheader.</h2>
+
+      <p>Tart pie brownie cookie topping chocolate gingerbread caramels dragée. This is someting <strong>bold</strong>,
+        <em>italic</em>, and a <a href="#">link</a>. Gummi bears topping tootsie roll fruitcake chupa chups cotton
+        candy. Croissant tootsie roll bear claw chocolate cake bear claw powder sweet roll. Liquorice cupcake soufflé
+        liquorice topping cookie powder wafer.</p>
+
+      <p>Gingerbread gingerbread cake sugar plum. Chupa chups soufflé dragée lemon drops lemon drops sugar plum.
+        Gingerbread tart lemon drops candy sweet macaroon. Pie cookie dragée chocolate bar pudding topping tiramisu
+        cotton candy topping.</p>
+
+      <button>This is a button</button>
+      <a class="button">This is a button link</a>
+      <a class="button alt">This is a alt button link</a>
+
+    </div>
+  </section>
+  <section id="layout">
+    <div class="container">
+
+      <h3 class="sectionhead">Layout</h3>
+      <h3 class="_line"></h3>
+      <small class="meta">images</small>
+      <img src="https://via.placeholder.com/1500x500" alt="placeholderImage">
+      <img src="https://place-hold.it/1500x500" alt="placeholderImage">
+      <img src="img/placeholder1500x500.gif" alt="placeholderImage">
+      <hr class="hr_" />
+
+      <small class="meta">grid</small>
+      <div class="row demo">
+        <div class="column">column</div>
+      </div>
+      <div class="row demo">
+        <div class="column one-half">&frac12; column</div>
+        <div class="column one-half">&frac12; column</div>
+      </div>
+
+      <div class="row demo">
+        <div class="column one-third">&frac13; column</div>
+        <div class="column one-third">&frac13; column</div>
+        <div class="column one-third">&frac13; column</div>
+      </div>
+      <div class="row demo">
+        <div class="column one-third">&frac13; column</div>
+        <div class="column two-thirds">&frac23; column</div>
+      </div>
+
+      <div class="row demo">
+        <div class="column one-fourth">&frac14; column</div>
+        <div class="column one-fourth">&frac14; column</div>
+        <div class="column one-fourth">&frac14; column</div>
+        <div class="column one-fourth">&frac14; column</div>
+      </div>
+
+
+      <div class="row demo">
+        <div class="column one-fourth">&frac14; column</div>
+        <div class="column three-fourths">&frac34; column</div>
+      </div>
+
+    </div>
+  </section>
 
   <footer class="site-footer">
-      <nav class="site-nav">
-          <ul>
-            <li><a href="#Top">home</a></li>
-            <li><a href="#">Typography</a></li>
-            <li><a href="#">Layout</a></li>
-          </ul>
-      </nav>
-  
-    </footer>
+    <nav class="site-nav">
+      <ul>
+        <li><a href="#top">home</a></li>
+        <li><a href="#typography">Typography</a></li>
+        <li><a href="#layout">Layout</a></li>
+      </ul>
+    </nav>
+
+  </footer>
 </body>
+
 </html>
