updated row and centered row utitlity items

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
   <section id="typography">
     <div class="container">
       <h3 class="sectionhead">Typography</h3>
-      <h3 class="_line"></h3>
       <p class="meta">Typographic Scale</p>
       <h1>heading 1</h1>
       <h2>heading 2</h2>
@@ -87,7 +86,7 @@
     <div class="container">
 
       <h3 class="sectionhead">Layout</h3>
-      <h3 class="_line"></h3>
+
       <small class="meta">images</small>
       <img src="https://via.placeholder.com/1500x500" alt="placeholderImage">
       <img src="https://place-hold.it/1500x500" alt="placeholderImage">
@@ -125,7 +124,37 @@
         <div class="column one-fourth">&frac14; column</div>
         <div class="column three-fourths">&frac34; column</div>
       </div>
-
+      <hr>
+      <div class="row">
+        <div class="div one-half column">
+          <img src="https://via.placeholder.com/1500" alt="placeholderImage">
+        </div>
+        <div class="div one-half column">
+          <h4>text on the right</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem quas beatae, sunt consectetur totam nesciunt,
+            explicabo ullam omnis, enim cupiditate assumenda? Non, fugit? Sed, earum?</p>
+        </div>
+      </div>
+      <div class="row swap">
+        <div class="one-half column">
+          <img src="https://via.placeholder.com/1500" alt="placeholderImage">
+        </div>
+        <div class="div one-half column">
+          <h4>text on the left</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem quas beatae, sunt consectetur totam nesciunt,
+            explicabo ullam omnis, enim cupiditate assumenda? Non, fugit? Sed, earum?</p>
+        </div>
+      </div>
+      <div class="row center">
+        <div class="div one-half column">
+          <img src="https://via.placeholder.com/1500" alt="placeholderImage">
+        </div>
+        <div class="div one-half column">
+          <h4>centered text and image</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem quas beatae, sunt consectetur totam nesciunt,
+            explicabo ullam omnis, enim cupiditate assumenda? Non, fugit? Sed, earum?</p>
+        </div>
+      </div>
     </div>
   </section>
 
