--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
     </nav>
 
   </footer>
+  <!-- Smooth Scroll JS-->
+  <script src="js/smooth-scroll.polyfills.min.js"></script>
+  <script>
+    var scroll = new SmoothScroll('a[href*="#"]');
+  </script>
 </body>
 
 </html>
